# ES-ENTERPRISE

./: .dockerignore  .env  .env.backup  .env.example  .firebaserc  App.tsx  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  Settings.tsx  cloudbuild.yaml  dev.bat  eslint.config.mjs  firestore.indexes.json  firestore.rules  index.html  index.tsx  metadata.json  package-lock.json  package.json  server.js  sgc_export_mock.json  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/skills/workspace-sync-multitenant/: SKILL.md
.claude/skills/workspace-sync-multitenant/references/: api-specs.md  firestore-schema.md
.claude/skills/workspace-sync-multitenant/scripts/: validate-sync.js
.github/workflows/: ci.yaml  deploy.yaml
apps/api/: BUILD.bazel  google_apps_script_database.js  server.ts  tsconfig.api.json
apps/web/: BUILD.bazel  index.html  index.tsx  tsconfig.json  vite-env.d.ts  vite.config.ts  vitest.setup.ts
components/Drive/: FileManager.tsx
components/Notifications/: NotificationCenter.tsx  ToastContainer.tsx
components/UI/: GlobalSearch.tsx  Navigation.tsx  OnboardingChecklist.tsx
components/WebBuilder/: EditorPanel.tsx  WebsiteEngine.tsx
components/WhatsApp/: BUILD.bazel  CallOverlay.tsx  ChatArea.tsx  ClientCRMDetails.tsx  ClientList.tsx  MessageInput.tsx  MessageList.tsx  MessageWindow.tsx  TemplateManager.tsx  WhatsAppModals.tsx
config/: config.ts  firebase.ts  navigation.ts  theme.ts
config/locales/: pt-BR.ts
docs/: architecture.md
docs/runbooks/: deployment.md
domains/ai/: BUILD.bazel  index.ts
domains/ai/components/: RicardoCommandPalette.tsx
domains/ai/core/: AIProvider.ts  AgentRunner.ts  ToolRegistry.ts
domains/ai/docs/: implementation_plan.md  task.md  walkthrough.md
domains/ai/providers/: GeminiProvider.ts  OpenAIProvider.ts
domains/ai/services/: aiService.ts  geminiService.ts  predictiveService.ts
domains/ai/tests/: geminiService.test.ts
domains/ai/tools/: listDomainsTool.ts  readFileTool.ts  searchCodeTool.ts  writeFileTool.ts
domains/ai/views/: AITrainingCenterView.tsx  AIView.tsx  AutomationView.tsx
domains/auth/: BUILD.bazel  index.ts
domains/auth/services/: organizationService.ts  tenantService.ts
domains/auth/types/: auth.types.ts
domains/auth/views/: LoginView.tsx  PrivacyPolicyView.tsx  SecurityView.tsx
domains/clients/: BUILD.bazel  index.ts
domains/clients/components/: ClientDetailsPanel.tsx
domains/clients/services/: clientService.ts
domains/clients/types/: clients.types.ts
domains/clients/views/: ClientsView.tsx  FunnelView.tsx
domains/google-workspace/: BUILD.bazel  index.ts
domains/google-workspace/services/: driveFileService.ts  googleApiService.ts  googleSyncService.ts
domains/google-workspace/types/: google-workspace.types.ts
domains/google-workspace/views/: DriveView.tsx
domains/inventory/: BUILD.bazel  index.ts
domains/inventory/services/: inventoryService.ts  seedInventoryService.ts  seedService.ts  taskService.ts
domains/inventory/types/: inventory.types.ts
domains/inventory/views/: InventoryView.tsx  TaskManagementView.tsx
domains/reports/: BUILD.bazel  index.ts
domains/reports/types/: reports.types.ts
domains/reports/views/: DashboardView.tsx
domains/shared/: BUILD.bazel  index.ts
domains/shared/components/Notifications/: NotificationCenter.tsx  ToastContainer.tsx
domains/shared/components/UI/: GlobalSearch.tsx  HelpGuide.tsx  MainLayout.tsx  Navigation.tsx  OnboardingChecklist.tsx  OnboardingModal.tsx  PremiumCard.tsx  ProtectedRoute.tsx
domains/shared/config/: config.ts  firebase.ts  navigation.ts  theme.ts
domains/shared/config/locales/: pt-BR.ts
domains/shared/hooks/: useAppContext.tsx  useTranslation.ts
domains/shared/services/: auditLogService.ts  auditService.ts  firestoreService.ts  i18nService.ts  mockData.ts
domains/shared/types/: common.types.ts
domains/shared/views/: App.tsx  DocumentsView.tsx  IntegrationsView.tsx  Settings.tsx  TermsOfServiceView.tsx
domains/shared/views/settings/: NotificationsTab.tsx  ProfileTab.tsx  SecurityTab.tsx  SettingsView.tsx
domains/site-builder/: BUILD.bazel  index.ts
domains/site-builder/components/: Canvas.tsx  EditorPanel.tsx  Renderers.tsx  WebsiteEngine.tsx
domains/site-builder/services/: siteService.ts
domains/site-builder/types/: site-builder.types.ts
domains/site-builder/views/: PublicSiteView.tsx  WebsiteBuilderView.tsx
domains/whatsapp/: BUILD.bazel  index.ts
domains/whatsapp/components/: ChatArea.tsx  ChatSidebar.tsx  ClientCRMDetails.tsx  ClientList.tsx  MessageList.tsx  MessageWindow.tsx  SuggestionBox.tsx  TemplateManager.tsx  WhatsAppModals.tsx
domains/whatsapp/hooks/: useWhatsAppState.ts
domains/whatsapp/services/: chatService.ts  mockTemplates.ts  whatsappApiService.ts
domains/whatsapp/types/: whatsapp.types.ts
domains/whatsapp/views/: WhatsAppView.tsx
hooks/: BUILD.bazel  useAppContext.tsx  useTranslation.ts  useWhatsAppState.ts
infra/firebase/: firestore.indexes.json
infra/gcp/: cloud-run.yaml  cloudbuild.yaml
scripts/: migrate-sites-to-firestore.ts  seed-inventory.js  seed-inventory.ts  validate-env.ts
services/: BUILD.bazel  auditLogService.ts  auditService.ts  chatService.ts  clientService.ts  driveFileService.ts  firestoreService.ts  geminiService.ts  googleApiService.ts  googleSyncService.ts  i18nService.ts  inventoryService.ts  mockData.ts  mockTemplates.ts  organizationService.ts  predictiveService.ts  seedInventoryService.ts  seedService.ts  tenantService.ts  translationService.ts  whatsappApiService.ts
views/: AIView.tsx  App.tsx  ClientsView.tsx  DashboardView.tsx  DocumentsView.tsx  DriveView.tsx  FunnelView.tsx  IntegrationsView.tsx  InventoryView.tsx  LoginView.tsx  PrivacyPolicyView.tsx  PublicSiteView.tsx  ReportsView.tsx  SecurityView.tsx  TermsOfServiceView.tsx  WebsiteBuilderView.tsx  WhatsAppView.tsx
