load("@aspect_rules_js//npm:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

npm_link_all_packages(name = "node_modules")

package(default_visibility = ["//visibility:public"])

# Aggregate target — build everything
alias(
    name = "all_domains",
    actual = select({
        "//conditions:default": "//domains/shared",
    }),
)
