load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "api_lib",
    srcs = ["server.ts", "google_apps_script_database.js"],
    declaration = True,
    tsconfig = "//:apps/api/tsconfig.api.json",
    deps = [
        "//:node_modules/express",
    ],
)

js_binary(
    name = "server",
    data = [":api_lib"],
    entry_point = "server.ts",
)
