load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "WhatsApp",
    srcs = glob(["*.tsx"]),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//:node_modules/react",
        "//:node_modules/lucide-react",
        "//:node_modules/framer-motion",
        "//:types",
        "//hooks:hooks",
        "//services:services",
    ],
)
