# domains/google-workspace BUILD.bazel
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "google-workspace",
    srcs = glob([
        "**/*.ts",
        "**/*.tsx",
    ], exclude = ["**/*.test.ts", "**/*.test.tsx"]),
    deps = [
        "//domains/shared",
    ],
    declaration = True,
)

ts_project(
    name = "google-workspace_tests",
    srcs = glob(["**/*.test.ts", "**/*.test.tsx"]),
    deps = [":google-workspace"],
    testonly = True,
)
