# domains/site-builder BUILD.bazel
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "site-builder",
    srcs = glob([
        "**/*.ts",
        "**/*.tsx",
    ], exclude = ["**/*.test.ts", "**/*.test.tsx"]),
    deps = [
        "//domains/shared",
    ],
    declaration = True,
)

ts_project(
    name = "site-builder_tests",
    srcs = glob(["**/*.test.ts", "**/*.test.tsx"]),
    deps = [":site-builder"],
    testonly = True,
)
